<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_instance"/>
        <EditText
            android:id="@+id/edtServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="oldmarket.store"/>
        <TextView
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/language"/>
        <Spinner
            android:id="@+id/spnLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/chkAutoInstallRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_install_root"/>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"/>
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reloadappsettings"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/infoproject"/>
        <TextView
            android:id="@+id/telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Telegram - @apksherr"/>
        <TextView
            android:id="@+id/youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="YouTube - @oldandroider"/>
    </LinearLayout>
</ScrollView>
