<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#f2f2f2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@drawable/bg_bottombar"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="65dp">
            <ImageButton
                android:id="@+id/btnHome"
                android:background="@android:color/transparent"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:src="@drawable/bg_market_icon"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/btnHome"
                android:layout_centerVertical="true">
                <TextView
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-3dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/all_apps"
                    android:shadowColor="#88000000"
                    android:shadowDx="0"
                    android:shadowDy="1"
                    android:shadowRadius="2.75"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="#ffffff"
                    android:id="@+id/txtSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text=""/>
            </LinearLayout>
            <ImageButton
                android:id="@+id/btnSearch"
                android:background="@android:color/transparent"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_search_selector"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/search"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:background="#e9e9e9"
            android:padding="0dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <Button
                android:textStyle="bold"
                android:textColor="#303030"
                android:id="@+id/btnTopFree"
                android:background="@drawable/bg_tab_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/top_free"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:src="@drawable/btn_strip_divider"/>
            <Button
                android:textStyle="bold"
                android:textColor="#303030"
                android:id="@+id/btnTopDownloads"
                android:background="@drawable/bg_tab_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/top_downloads"
                android:layout_weight="1"/>
        </LinearLayout>
        <ListView
            android:id="@+id/list"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:listSelector="@drawable/bg_press_item"
            android:cacheColorHint="#00000000"
            android:divider="#e0e0e0"
            android:dividerHeight="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/loadingOverlay"
        android:background="@android:color/transparent"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="#111111"
                android:id="@+id/txtLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/loading"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
