<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/bg_bottombar"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textColor="#111111"
                android:textColorHint="#777777"
                android:id="@+id/edtQuery"
                android:background="#ffffffff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:singleLine="true"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/btnDoSearch"
                android:background="@android:color/transparent"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/search"/>
        </LinearLayout>
        <ListView
            android:id="@+id/list"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@drawable/bg_press_item"
            android:cacheColorHint="#00000000"
            android:divider="#dddddd"
            android:dividerHeight="1dp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/loadingOverlay"
        android:background="@android:color/transparent"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="#111111"
                android:id="@+id/txtLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/searching"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
