<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/bg_section_header"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#ffffff"
            android:id="@+id/txtDownloadsInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:textColor="#ffffff"
            android:id="@+id/txtReviewsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:background="#ffffff"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:textColor="#222222"
            android:id="@+id/txtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <TextView
            android:textColor="#555555"
            android:id="@+id/txtMeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text=""/>
    </LinearLayout>
    <TextView
        android:textColor="#ffffff"
        android:id="@+id/txtScreensTitle"
        android:background="@drawable/bg_section_header"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/screenshots"/>
    <HorizontalScrollView
        android:id="@+id/screensScroll"
        android:background="#ffffff"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/screensContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </HorizontalScrollView>
    <TextView
        android:textColor="#ffffff"
        android:id="@+id/txtReviewsTitle"
        android:background="@drawable/bg_section_header"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reviews"/>
    <TextView
        android:textColor="#000"
        android:id="@+id/txtreviewinfo"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reviewsinfo"/>
    <RatingBar
        android:id="@+id/ratingAddReview"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1"
        android:isIndicator="false"
        style="?android:attr/ratingBarStyle"/>
</LinearLayout>
